--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
 <header class="header-white">
     <nav class="navbar navbar-expand-lg">
         <div class="container header-content">
-            <a href="/" class="logo-container">
+            <a href="index.html" class="logo-container">
                 <img src="assets/images/landing/colored-logo.svg" alt="Mobile Booster, Clear signal, every time"
                      class="mobile-booster-logo"/>
             </a>
@@ -29,7 +29,6 @@
                     </div>
                 </button>
             </div>
-            </a>
             <div class="collapse navbar-collapse d-none d-lg-block" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-lg-0 navbar-nav-scroll navbar-list"
                     style="--bs-scroll-height: 100px;">
@@ -43,21 +42,21 @@
                         <ul role="menu" class="navbar-dropdown dropdown-menu" data-bs-popper="static">
                             <li class="navbar-dropdown-list">
                                 <p class="navbar-dropdown-heading">Shop by coverage</p>
-                                <a href="#" class="navbar-dropdown-links">Small Space (0: 300 SQM)</a>
-                                <a href="#" class="navbar-dropdown-links">Midsize Space (300 : 500 SQM)</a>
-                                <a href="#" class="navbar-dropdown-links">Large Space (500: 1000 SQM)</a>
-                                <a href="#" class="navbar-dropdown-links">huge space (1000 : 5000 SQM)</a>
+                                <a href="product.html" class="navbar-dropdown-links">Small Space (0: 300 SQM)</a>
+                                <a href="product.html" class="navbar-dropdown-links">Midsize Space (300 : 500 SQM)</a>
+                                <a href="product.html" class="navbar-dropdown-links">Large Space (500: 1000 SQM)</a>
+                                <a href="product.html" class="navbar-dropdown-links">huge space (1000 : 5000 SQM)</a>
                             </li>
                             <li class="navbar-dropdown-list">
                                 <p class="navbar-dropdown-heading">Shop by signal type</p>
-                                <a href="#" class="navbar-dropdown-links">3G</a>
-                                <a href="#" class="navbar-dropdown-links">4G</a>
-                                <a href="#" class="navbar-dropdown-links">5G</a>
-                                <a href="#" class="navbar-dropdown-links">3G & 4G & 5G</a>
+                                <a href="product.html" class="navbar-dropdown-links">3G</a>
+                                <a href="product.html" class="navbar-dropdown-links">4G</a>
+                                <a href="product.html" class="navbar-dropdown-links">5G</a>
+                                <a href="product.html" class="navbar-dropdown-links">3G & 4G & 5G</a>
                             </li>
                             <li class="navbar-dropdown-list navbar-dropdown-suggestion">
                                 <img src="assets/images/landing/Black1%201.png"/>
-                                <a href="#" class="btn-primary w-100">show more</a>
+                                <a href="product.html" class="btn-primary w-100">show more</a>
                             </li>
                         </ul>
                     </li>
@@ -70,15 +69,15 @@
                         </div>
                         <div class="navbar-dropdown">
                             <div class="navbar-dropdown-list">
-                                <a href="#" class="navbar-dropdown-heading-lighter">Vodafone</a>
-                                <a href="#" class="navbar-dropdown-heading-lighter">O2</a>
-                                <a href="#" class="navbar-dropdown-heading-lighter">giffgaff</a>
-                                <a href="#" class="navbar-dropdown-heading-lighter">Tesco Mobile</a>
-                                <a href="#" class="navbar-dropdown-heading-lighter">EE</a>
-                                <a href="#" class="navbar-dropdown-heading-lighter">BT</a>
-                                <a href="#" class="navbar-dropdown-heading-lighter">ID UK</a>
-                                <a href="#" class="navbar-dropdown-heading-lighter">Three UK</a>
-                                <a href="#" class="navbar-dropdown-heading-lighter">Virgin UK</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">Vodafone</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">O2</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">giffgaff</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">Tesco Mobile</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">EE</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">BT</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">ID UK</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">Three UK</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">Virgin UK</a>
                             </div>
                         </div>
                     </li>
@@ -91,13 +90,13 @@
                         </div>
                         <ul class="navbar-dropdown dropdown-menu" id="frequency-dropdown">
                             <li class="navbar-dropdown-list">
-                                <a href="#" class="navbar-dropdown-heading-lighter">700 MHz (5G)</a>
-                                <a href="#" class="navbar-dropdown-heading-lighter">700/800 MHz</a>
-                                <a href="#" class="navbar-dropdown-heading-lighter">700/1800 MHz</a>
-                                <a href="#" class="navbar-dropdown-heading-lighter">900/210 MHz</a>
-                                <a href="#" class="navbar-dropdown-heading-lighter">800/2600 MHz</a>
-                                <a href="#" class="navbar-dropdown-heading-lighter">800/900/2100 MHz</a>
-                                <a href="#" class="navbar-dropdown-heading-lighter">700/900/1800 /2100/2600 MHz</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">700 MHz (5G)</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">700/800 MHz</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">700/1800 MHz</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">900/210 MHz</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">800/2600 MHz</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">800/900/2100 MHz</a>
+                                <a href="product.html" class="navbar-dropdown-heading-lighter">700/900/1800 /2100/2600 MHz</a>
                             </li>
                         </ul>
                     </li>
@@ -124,35 +123,34 @@
                     <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">Shop</a>
                     <ul class="inner-list">
-                        <li><a href="#">Micro-Home (300 SQM)</a></li>
-                        <li><a href="#">Home (500 SQM)</a></li>
-                        <li><a href="#">Hotel (1000 SQM)</a></li>
-                        <li><a href="#">Factory (5000 SQM)</a></li>
+                        <li><a href="product.html">Micro-Home (300 SQM)</a></li>
+                        <li><a href="product.html">Home (500 SQM)</a></li>
+                        <li><a href="product.html">Hotel (1000 SQM)</a></li>
+                        <li><a href="product.html">Factory (5000 SQM)</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">Carriers</a>
                     <ul class="inner-list">
-                        <li><a href="#">Micro-Home (300 SQM)</a></li>
-                        <li><a href="#">Home (500 SQM)</a></li>
-                        <li><a href="#">Hotel (1000 SQM)</a></li>
-                        <li><a href="#">Factory (5000 SQM)</a></li>
+                        <li><a href="product.html">Vodafone</a></li>
+                        <li><a href="product.html">O2</a></li>
+                        <li><a href="product.html">EE</a></li>
+                        <li><a href="product.html">Three UK</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">Frequency</a>
                     <ul class="inner-list">
-                        <li><a href="#">Micro-Home (300 SQM)</a></li>
-                        <li><a href="#">Home (500 SQM)</a></li>
-                        <li><a href="#">Hotel (1000 SQM)</a></li>
-                        <li><a href="#">Factory (5000 SQM)</a></li>
+                        <li><a href="product.html">700 MHz (5G)</a></li>
+                        <li><a href="product.html">700/800 MHz</a></li>
+                        <li><a href="product.html">800/2600 MHz</a></li>
+                        <li><a href="product.html">All Frequencies</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a href="#" class="nav-link">Floor Plan Analysis</a></li>
             </ul>
-
         </div>
     </nav>
 </header>
@@ -175,7 +173,7 @@
         <div class="row row-gap-4 row-gap-lg-0">
             <div class="single-blog-section col-12">
                 <h2>Trending Articles</h2>
-                <a href="./article.html" class="single-blog-card">
+                <a href="article.html" class="single-blog-card">
                     <div class="single-blog-img">
                         <img src="assets/images/landing/single-blog-image.png"/>
                     </div>
@@ -194,7 +192,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-6">
-                <a href="./article.html" class="double-blog-card">
+                <a href="article.html" class="double-blog-card">
                     <div class="double-blog-img">
                         <img src="assets/images/landing/double-blog-img-1.png"/>
                     </div>
@@ -214,7 +212,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-6">
-                <a href="./article.html" class="double-blog-card">
+                <a href="article.html" class="double-blog-card">
                     <div class="double-blog-img">
                         <img src="assets/images/landing/double-blog-img-2.png"/>
                     </div>
@@ -239,7 +237,7 @@
         <h2>Latest Articles</h2>
         <div class="row row-gap-4 mt-4">
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="./article.html" class="latest-articles-card">
+                <a href="article.html" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-1.png"/>
                     </div>
@@ -253,7 +251,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="./article.html" class="latest-articles-card">
+                <a href="article.html" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-2.png"/>
                     </div>
@@ -268,7 +266,7 @@
 
             </div>
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="./article.html" class="latest-articles-card">
+                <a href="article.html" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-3.png"/>
                     </div>
@@ -282,7 +280,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="./article.html" class="latest-articles-card">
+                <a href="article.html" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-5.png"/>
                     </div>
@@ -297,7 +295,7 @@
 
             </div>
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="./article.html" class="latest-articles-card">
+                <a href="article.html" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-6.png"/>
                     </div>
@@ -311,7 +309,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="./article.html" class="latest-articles-card">
+                <a href="article.html" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-7.png"/>
                     </div>
@@ -325,7 +323,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="./article.html" class="latest-articles-card">
+                <a href="article.html" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-8.png"/>
                     </div>
@@ -339,7 +337,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="./article.html" class="latest-articles-card">
+                <a href="article.html" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-9.png"/>
                     </div>
@@ -353,7 +351,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="./article.html" class="latest-articles-card">
+                <a href="article.html" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-10.png"/>
                     </div>
@@ -367,7 +365,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="./article.html" class="latest-articles-card">
+                <a href="article.html" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-11.png"/>
                     </div>
@@ -381,7 +379,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="./article.html" class="latest-articles-card">
+                <a href="article.html" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-12.png"/>
                     </div>
@@ -395,7 +393,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="./article.html" class="latest-articles-card">
+                <a href="article.html" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-11.png"/>
                     </div>
@@ -422,10 +420,10 @@
             <div>
                 <h6 class="footer-list-heading">Explore Products</h6>
                 <ul class="footer-list">
-                    <li><a href="#">Find a Booster Quiz</a></li>
-                    <li><a href="#">Accessories</a></li>
+                    <li><a href="index.html#booster-quiz">Find a Booster Quiz</a></li>
+                    <li><a href="product.html">Accessories</a></li>
                     <li><a href="#">Installation Guide</a></li>
-                    <li><a href="#">Enterprise Solutions</a></li>
+                    <li><a href="product.html">Enterprise Solutions</a></li>
                 </ul>
             </div>
             <div>
@@ -443,7 +441,7 @@
                     <li><a href="#">Terms & Conditions</a></li>
                     <li><a href="#">Buyer's Guide</a></li>
                     <li><a href="#">About Us</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                 </ul>
             </div>
             <div>
@@ -480,7 +478,7 @@
         </div>
     </div>
     <div class="copyright-container container">
-        <a href="/" class="sm-none">
+        <a href="index.html" class="sm-none">
             <img src="assets/images/landing/colored-logo.svg" alt="Mobile Booster, Clear signal, every time"
                  class="mobile-booster-logo">
         </a>
