--- a/article.html
+++ b/article.html
@@ -14,7 +14,7 @@
 <header class="header-white">
     <nav class="navbar navbar-expand-lg">
         <div class="container header-content">
-            <a href="index.html" class="logo-container">
+            <a href="/" class="logo-container">
                 <img src="assets/images/landing/colored-logo.svg" alt="Mobile Booster, Clear signal, every time"
                      class="mobile-booster-logo"/>
             </a>
@@ -29,6 +29,7 @@
                     </div>
                 </button>
             </div>
+            </a>
             <div class="collapse navbar-collapse d-none d-lg-block" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-lg-0 navbar-nav-scroll navbar-list"
                     style="--bs-scroll-height: 100px;">
@@ -42,21 +43,21 @@
                         <ul role="menu" class="navbar-dropdown dropdown-menu" data-bs-popper="static">
                             <li class="navbar-dropdown-list">
                                 <p class="navbar-dropdown-heading">Shop by coverage</p>
-                                <a href="product.html" class="navbar-dropdown-links">Small Space (0: 300 SQM)</a>
-                                <a href="product.html" class="navbar-dropdown-links">Midsize Space (300 : 500 SQM)</a>
-                                <a href="product.html" class="navbar-dropdown-links">Large Space (500: 1000 SQM)</a>
-                                <a href="product.html" class="navbar-dropdown-links">huge space (1000 : 5000 SQM)</a>
+                                <a href="#" class="navbar-dropdown-links">Small Space (0: 300 SQM)</a>
+                                <a href="#" class="navbar-dropdown-links">Midsize Space (300 : 500 SQM)</a>
+                                <a href="#" class="navbar-dropdown-links">Large Space (500: 1000 SQM)</a>
+                                <a href="#" class="navbar-dropdown-links">huge space (1000 : 5000 SQM)</a>
                             </li>
                             <li class="navbar-dropdown-list">
                                 <p class="navbar-dropdown-heading">Shop by signal type</p>
-                                <a href="product.html" class="navbar-dropdown-links">3G</a>
-                                <a href="product.html" class="navbar-dropdown-links">4G</a>
-                                <a href="product.html" class="navbar-dropdown-links">5G</a>
-                                <a href="product.html" class="navbar-dropdown-links">3G & 4G & 5G</a>
+                                <a href="#" class="navbar-dropdown-links">3G</a>
+                                <a href="#" class="navbar-dropdown-links">4G</a>
+                                <a href="#" class="navbar-dropdown-links">5G</a>
+                                <a href="#" class="navbar-dropdown-links">3G & 4G & 5G</a>
                             </li>
                             <li class="navbar-dropdown-list navbar-dropdown-suggestion">
                                 <img src="assets/images/landing/Black1%201.png"/>
-                                <a href="product.html" class="btn-primary w-100">show more</a>
+                                <a href="#" class="btn-primary w-100">show more</a>
                             </li>
                         </ul>
                     </li>
@@ -69,15 +70,15 @@
                         </div>
                         <div class="navbar-dropdown">
                             <div class="navbar-dropdown-list">
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">Vodafone</a>
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">O2</a>
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">giffgaff</a>
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">Tesco Mobile</a>
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">EE</a>
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">BT</a>
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">ID UK</a>
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">Three UK</a>
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">Virgin UK</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">Vodafone</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">O2</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">giffgaff</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">Tesco Mobile</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">EE</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">BT</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">ID UK</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">Three UK</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">Virgin UK</a>
                             </div>
                         </div>
                     </li>
@@ -90,13 +91,13 @@
                         </div>
                         <ul class="navbar-dropdown dropdown-menu" id="frequency-dropdown">
                             <li class="navbar-dropdown-list">
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">700 MHz (5G)</a>
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">700/800 MHz</a>
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">700/1800 MHz</a>
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">900/210 MHz</a>
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">800/2600 MHz</a>
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">800/900/2100 MHz</a>
-                                <a href="product.html" class="navbar-dropdown-heading-lighter">700/900/1800 /2100/2600 MHz</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">700 MHz (5G)</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">700/800 MHz</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">700/1800 MHz</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">900/210 MHz</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">800/2600 MHz</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">800/900/2100 MHz</a>
+                                <a href="#" class="navbar-dropdown-heading-lighter">700/900/1800 /2100/2600 MHz</a>
                             </li>
                         </ul>
                     </li>
@@ -123,33 +124,33 @@
                     <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">Shop</a>
                     <ul class="inner-list">
-                        <li><a href="product.html">Micro-Home (300 SQM)</a></li>
-                        <li><a href="product.html">Home (500 SQM)</a></li>
-                        <li><a href="product.html">Hotel (1000 SQM)</a></li>
-                        <li><a href="product.html">Factory (5000 SQM)</a></li>
+                        <li><a href="#">Micro-Home (300 SQM)</a></li>
+                        <li><a href="#">Home (500 SQM)</a></li>
+                        <li><a href="#">Hotel (1000 SQM)</a></li>
+                        <li><a href="#">Factory (5000 SQM)</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">Carriers</a>
                     <ul class="inner-list">
-                        <li><a href="product.html">Vodafone</a></li>
-                        <li><a href="product.html">O2</a></li>
-                        <li><a href="product.html">EE</a></li>
-                        <li><a href="product.html">Three UK</a></li>
+                        <li><a href="#">Micro-Home (300 SQM)</a></li>
+                        <li><a href="#">Home (500 SQM)</a></li>
+                        <li><a href="#">Hotel (1000 SQM)</a></li>
+                        <li><a href="#">Factory (5000 SQM)</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">Frequency</a>
                     <ul class="inner-list">
-                        <li><a href="product.html">700 MHz (5G)</a></li>
-                        <li><a href="product.html">700/800 MHz</a></li>
-                        <li><a href="product.html">800/2600 MHz</a></li>
-                        <li><a href="product.html">All Frequencies</a></li>
+                        <li><a href="#">Micro-Home (300 SQM)</a></li>
+                        <li><a href="#">Home (500 SQM)</a></li>
+                        <li><a href="#">Hotel (1000 SQM)</a></li>
+                        <li><a href="#">Factory (5000 SQM)</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Floor Plan Analysis</a></li>
             </ul>
 
         </div>
@@ -189,7 +190,7 @@
                 </a>
             </div>
             <div class="article-content">
-                <h3>Don't Let Poor Signal Quality Hold You Back: Get Your Mobile Signal Booster Now</h3>
+                <h3>Don’t Let Poor Signal Quality Hold You Back: Get Your Mobile Signal Booster Now</h3>
                 <span class="read-time">
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g clip-path="url(#clip0_187_11325)">
@@ -455,7 +456,7 @@ This is for larger buildings who need extra cable from roof to the Booster insid
         <h2>Related Articles</h2>
         <div class="row row-gap-4 mt-4">
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="article.html" class="latest-articles-card">
+                <a href="#" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-1.png"/>
                     </div>
@@ -469,7 +470,7 @@ This is for larger buildings who need extra cable from roof to the Booster insid
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="article.html" class="latest-articles-card">
+                <a href="#" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-2.png"/>
                     </div>
@@ -483,7 +484,7 @@ This is for larger buildings who need extra cable from roof to the Booster insid
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="article.html" class="latest-articles-card">
+                <a href="#" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-3.png"/>
                     </div>
@@ -497,7 +498,7 @@ This is for larger buildings who need extra cable from roof to the Booster insid
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-                <a href="article.html" class="latest-articles-card">
+                <a href="#" class="latest-articles-card">
                     <div class="latest-articles-img">
                         <img src="assets/images/landing/blog-img-4.png"/>
                     </div>
@@ -523,10 +524,10 @@ This is for larger buildings who need extra cable from roof to the Booster insid
             <div>
                 <h6 class="footer-list-heading">Explore Products</h6>
                 <ul class="footer-list">
-                    <li><a href="index.html#booster-quiz">Find a Booster Quiz</a></li>
-                    <li><a href="product.html">Accessories</a></li>
+                    <li><a href="#">Find a Booster Quiz</a></li>
+                    <li><a href="#">Accessories</a></li>
                     <li><a href="#">Installation Guide</a></li>
-                    <li><a href="product.html">Enterprise Solutions</a></li>
+                    <li><a href="#">Enterprise Solutions</a></li>
                 </ul>
             </div>
             <div>
@@ -542,9 +543,9 @@ This is for larger buildings who need extra cable from roof to the Booster insid
                 <h6 class="footer-list-heading">Company Information</h6>
                 <ul class="footer-list">
                     <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Buyer's Guide</a>
+                    <li><a href="#">Buyer's Guide</a></li>
                     <li><a href="#">About Us</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="#">Blog</a></li>
                 </ul>
             </div>
             <div>
@@ -581,7 +582,7 @@ This is for larger buildings who need extra cable from roof to the Booster insid
         </div>
     </div>
     <div class="copyright-container container">
-        <a href="index.html" class="sm-none">
+        <a href="/" class="sm-none">
             <img src="assets/images/landing/colored-logo.svg" alt="Mobile Booster, Clear signal, every time"
                  class="mobile-booster-logo">
         </a>
@@ -644,6 +645,8 @@ This is for larger buildings who need extra cable from roof to the Booster insid
         </div>
     </div>
 </div>
+<script src="assets/js/article-progress-bar.js" type="module"></script>
+<script src="assets/js/share-article.js" type="module"></script>
 <script src="assets/js/article.js" type="module"></script>
 </body>
 </html>
