Add Archive Link to Footer

--- a/article.html
+++ b/article.html
@@ -190,7 +190,7 @@
                 </a>
             </div>
             <div class="article-content">
-                <h3>Don’t Let Poor Signal Quality Hold You Back: Get Your Mobile Signal Booster Now</h3>
+                <h3>Don't Let Poor Signal Quality Hold You Back: Get Your Mobile Signal Booster Now</h3>
                 <span class="read-time">
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g clip-path="url(#clip0_187_11325)">
@@ -525,6 +525,7 @@ This is for larger buildings who need extra cable from roof to the Booster insid
                 <h6 class="footer-list-heading">Explore Products</h6>
                 <ul class="footer-list">
                     <li><a href="#">Find a Booster Quiz</a></li>
+                    <li><a href="/archive.html">Product Archive</a></li>
                     <li><a href="#">Accessories</a></li>
                     <li><a href="#">Installation Guide</a></li>
                     <li><a href="#">Enterprise Solutions</a></li>
@@ -645,8 +646,6 @@ This is for larger buildings who need extra cable from roof to the Booster insid
         </div>
     </div>
 </div>
-<script src="assets/js/article-progress-bar.js" type="module"></script>
-<script src="assets/js/share-article.js" type="module"></script>
 <script src="assets/js/article.js" type="module"></script>
 </body>
 </html>
